# tv-os

./: .gitignore  PLAN.md  README.md  install.sh  uninstall.sh  update.sh
.claude/: launch.json
.tvos/: README.md  portable
design/: DESIGN_PROMPT.md
macos/: build-arm64-app.sh  install-runtime-tools.sh
macos/TVOSMac/: AppDelegate.swift  Info.plist  make_icon.swift
packaging/: PKGBUILD  tvos.desktop
shell/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
shell/src/: App.tsx  AppsTab.tsx  DesktopHome.tsx  DetailsPage.tsx  GameModsPanel.tsx  Hero.tsx  MediaRow.tsx  SearchOverlay.tsx  SectionPage.tsx  SettingsPanel.tsx  Shelf.tsx  api.ts  (+10 more)
system/: get-player.sh  get-shaders.sh  install-package.sh  install.sh  package.sh  run-demo.sh  sddm-tvos.conf  tvos-app  tvos-session  tvos-shell  tvos.desktop
tools/: sample-addon.py
tvosd/: Cargo.toml
tvosd/data/: enhance-toggle.lua  homebrew.json  live_sources.json
tvosd/player/: input.conf
tvosd/player/script-opts/: modernz.conf  uosc.conf
tvosd/player/scripts/: controller.lua  modernz.lua  resume.lua  skip.lua  startup.lua  tvos_player.lua  upscaler.lua
tvosd/src/: addons.rs  embed.rs  fuzzy.rs  install.rs  launcher.rs  logging.rs  main.rs  media.rs  mod_auth.rs  model.rs  mods.rs  profile.rs  recommend.rs  resume.rs  search.rs  settings.rs  shaders.rs  sponsorblock.rs  tracking.rs  upscale.rs  util.rs
tvosd/src/sources/: cloudstream.rs  epic.rs  gamehub.rs  gamerec.rs  gog.rs  hltb.rs  live.rs  mod.rs  retro.rs  steam.rs  stremio.rs  tmdb.rs  twitch.rs  videos.rs  youtube.rs
(+4461 files in other folders)
