[package]
name = "tvosd"
version = "0.8.2"
edition = "2021"
description = "TV OS daemon: serves the shell UI, lists the library, launches content"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
