[package]
name = "tvosd"
version = "0.10.4"
edition = "2021"
description = "TV OS daemon: serves the shell UI, lists the library, launches content"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
include_dir = "0.7"
fastembed = "5.17.2"
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1" # gunzip XMLTV EPG guides (.xml.gz)
rusqlite = { version = "0.32", features = ["bundled"] }

# Shrink the shipped binary. Keep panic=unwind (default) — no panic=abort.
[profile.release]
lto = "thin"
codegen-units = 1
strip = true
